--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodeproject",
+  "name": "nodejsmongodb",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -8,13 +8,14 @@
   "main": "app.js",
   "dependencies": {
     "body-parser": "~1.10.2",
+    "multer":"~0.1.8",
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
     "express": "~4.11.1",
     "jade": "~1.9.1",
     "mongoose": "^3.8.24",
     "morgan": "~1.5.1",
-    "multer": "~0.1.8",
     "serve-favicon": "~2.2.0"
   }
 }
+
